# prooflint

./: .env.example  .gitignore  AGENTS.md  LICENSE  ProofLint-MVP-Spec.md  README.md  docker-compose.yml  prooflint.py
.githooks/: pre-push
backend/: Dockerfile  manage.py  pyproject.toml
backend/agents/: admin.py  bot_contract.py  context_builder.py  global_annotator.py  models.py  runner.py  serializers.py  urls.py  views.py
backend/agents/migrations/: 0001_initial.py  0002_align_spec_v03.py
backend/annotations/: admin.py  models.py  serializers.py  urls.py  views.py
backend/annotations/migrations/: 0001_initial.py  0002_annotation_v2_schema.py  0003_align_spec_v03.py
backend/documents/: admin.py  models.py  serializers.py  tests.py  views.py
backend/documents/ingestion/: __init__.py  ast_processor.py  macro_expander.py  pandoc.py  pipeline.py  preamble.py  sentence_splitter.py
backend/documents/migrations/: 0001_initial.py  0002_block_blockquote_type.py
backend/prooflint/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
examples/: maximal_descendants.md  permutation_representations.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: localAdmin.ts
frontend/src/components/: AnnotationPanel.tsx  BlockRenderer.tsx  BotStatusBar.tsx  BotSummary.tsx  BotWizard.tsx  CheckToggle.tsx  DocumentList.tsx  DocumentView.css  DocumentView.tsx  SettingsPage.tsx  VerificationProgress.tsx
frontend/src/stores/: agentStore.ts  uiStore.ts  (+3 more)
scripts/: check_secrets.py
(+1 files in other folders)
