[project]
name = "prooflint-backend"
version = "0.1.0"
description = "AI-assisted proof review workbench — backend"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.0",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.0",
    "panflute>=2.3",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.setuptools.packages.find]
include = ["prooflint*", "documents*", "annotations*", "agents*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "prooflint.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
